AWS/03_ec2(web)/vpc.tf
###############################################################################
# VPC
###############################################################################
resource "aws_vpc" "vpc" {
  cidr_block           = "10.1.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "false"
  tags = {
    Name = "${var.prefix}-vpc"
  }
}
